@@ -4,6 +4,7 @@ Unreleased Version 2.2.0-pre
  * Fix: Don't filter out undo depth messages when playing back recordings.
  * Fix: Make floating docks restore properly again. Thanks SnazComic for reporting.
  * Fix: Don't show tag options when right-clicking on a brush preset. Thanks Blozzom for reporting.
+ * Fix: Properly disable blend mode combo box in layer properties dialog. Thanks xxxx for reporting.
 
 2023-07-31 Version 2.2.0-beta.6
  * Fix: Don't forget account password when entering a wrong session password.
